# gifken

./: .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  .travis.yml  .xo-config.json  CHANGELOG.md  Gif.ts  Gruntfile.coffee  LICENSE  README-ja.md  README.md  d.js  gifken.ts  index.html  jest.config.js  lint-staged.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts
.github/workflows/: npm-publish.yml
.husky/: commit-msg
crate/: .gitignore  Cargo.toml  package.json
crate/src/: lib.rs
docs/: globals.html  index.html
docs/classes/: _gif_.gif.html  _gif_.gifcompressedcodestobytearrayconverter.html  _gifcolor_.gifcolor.html  _gifcompressedcodestobytearrayconverter_.gifcompressedcodestobytearrayconverter.html  _gifframe_.gifframe.html  _gifparser_.gifparser.html  _gifpresenter_.gifpresenter.html
docs/enums/: _gifversion_.gifversion.html
docs/interfaces/: _gifimage_.gifimage.html
docs/modules/: _browser_.html  _gif_.html  _gifcolor_.html  _gifcompressedcodestobytearrayconverter_.html  _gifframe_.html  _gifimage_.html  _gifken_.html  _gifken_client_.html  _gifparser_.html  _gifpresenter_.html  _gifversion_.html  _index_.html
sample/chromeextension/: README.md  manifest.json
sample/node/: app.js
src/: Gif.ts  GifColor.ts  GifCompressedCodesToByteArrayConverter.ts  GifFrame.ts  GifImage.ts  GifParser.ts  GifPresenter.ts  GifVersion.ts  browser.ts  gifken-client.js  gifken-client.ts  gifken.ts  index.ts  node.ts
test/: gifken.test.js  gifken.test.ts  gifkenSpec.js
(+5 files in other folders)
