[package]
name = "gifken"
version = "0.1.0"
authors = ["Haruaki OTAKE <aaharu@hotmail.com>"]
repository = "https://github.com/aaharu/gifken/"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = "0.3"
image = { version = "0.24.3", default-features = false, features = ["gif"] }

[profile.release]
lto = true
opt-level = "s"
